--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Bienvenido a la Prueba</h1>
-    <h2>prueba de un comit mas</h2>
+    <p>prueba de un comit mas</p>
 </body>
 </html>
